--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsup src/index.ts --format cjs,esm --dts",
-        "lint": "tsc"
+        "lint": "tsc",
+        "release": "npm run build && changeset publish"
     },
     "keywords": [],
     "author": "",
