--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
     "compilerOptions": {
-        "sourceMap": true,
+        // "sourceMap": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "moduleResolution": "Node",
+        "target": "ES2022",
         "module": "ES2022",
-        "target": "ES2021",
-        "removeComments": true,
+        // "removeComments": true,
         "outDir": "./dist",
         "strict": true,
         "strictNullChecks": true,
